--- a/www/change-username.html
+++ b/www/change-username.html
@@ -40,7 +40,8 @@
         .then(res => res.json())
         .then(data => {
             console.log(data)
-            if (data.detail) {loadingFunc(loadingBox, "off"); cealert(data.detail);}
+            if (data.detail == "User not found") {location.replace("login.html")}
+            else if (data.detail) {loadingFunc(loadingBox, "off"); cealert(data.detail);}
             else if (data.status == false) {cealert(data.message); loadingFunc("off")}
             else {history.back()}
         })
