--- a/www/login.html
+++ b/www/login.html
@@ -45,8 +45,7 @@
         
         fetch(baseUrl+"/api/token/", {
             method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({username: formData.get("username"), password: formData.get("password")})
+            body: formData
         })
         .then(res => res.json())
         .then(data => {
