--- a/www/register.html
+++ b/www/register.html
@@ -44,16 +44,14 @@
         
         fetch(baseUrl+"/user/register/", {
             method: "POST",
-            headers: {"Content-Type": "application/json"},
-            body: JSON.stringify({username: formData.get("username"), password: formData.get("password")})
+            body: formData
         })
         .then(res => res.json())
         .then(data => {
             if (data.status == false) {loadingFunc(loadingBox, "off"); cealert(data.message); return;}
             fetch(baseUrl+"/api/token/", {
                 method: "POST",
-                headers: {"Content-Type": "application/json"},
-                body: JSON.stringify({username: formData.get("username"), password: formData.get("password")})
+                body: formData
             })
             .then(res => res.json())
             .then(data => {
