--- a/www/view-product.html
+++ b/www/view-product.html
@@ -60,8 +60,9 @@
     })
     .then(res => res.json())
     .then(data => {
-        if (data.detail) {cealert(data.detail)}
-        else if (data.status == false) {cealert(data.message)}
+        if (data.detail == "User not found") {location.replace("login.html")}
+        else if (data.detail) {cealert(data.detail); return;}
+        else if (data.status == false) {cealert(data.message); return;}
         else {
             console.log(headers)
             console.log(data.message)
@@ -91,7 +92,8 @@
         })
         .then(res => res.json())
         .then(data => {
-            if (data.detail) {cealert(data.detail)}
+            if (data.detail == "User not found") {location.replace("login.html")}
+            else if (data.detail) {cealert(data.detail)}
             else if (data.status == false) {cealert(data.message)}
             else {
                 console.log(data)
