--- a/www/login.html
+++ b/www/login.html
@@ -45,7 +45,8 @@
         
         fetch(baseUrl+"/api/token/", {
             method: "POST",
-            body: formData
+            headers: {"Content-Type": "application/json"},
+            body: JSON.stringify({username: formData.get("username"), password: formData.get("password")})
         })
         .then(res => res.json())
         .then(data => {
