--- a/www/tests/draft.html
+++ b/www/tests/draft.html
@@ -4,39 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        * {margin: 0;padding: 0;}
-        .customErrorAlert {
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            background: #FF1C1C;
-            display: flex;
-            flex-direction: column;
-            color: white;
-            width: 80%;
-            padding: 1em;
-            border-radius: .5em;
-        }
-        .customErrorAlert header {
-            display: flex;
-            padding: .5em;
-            gap: .5em;
-            border-bottom: 1px solid #FF6565;
-        }
-        .customErrorAlert header i {font-size: 1.5em}
+* {margin: 0; padding: 0; box-sizing: border-box;}
+
+
     </style>
 </head>
 <body>
-    <div class="customErrorAlert">
-        <header>
-            <i class="fas fa-close"></i>
-            <h3>Error</h3>
-        </header>
-        <div class="message">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae cupiditate blanditiis id iste voluptatum iure atque aut debitis reiciendis reprehenderit enim perferendis, dignissimos ducimus, consequuntur consectetur quae sed eligendi!</p>
-        </div>
-    </div>
+
 </body>
 </html>
