--- a/www/tests/updates.html
+++ b/www/tests/updates.html
@@ -14,7 +14,7 @@
 fetch(baseUrl+"/appmanage/", {
     method: "POST",
     headers: {"Content-Type": "application/json", "authorization": `Bearer ${accessToken}`},
-    body: JSON.stringify({version: "1", update_url: "https://", description: "test"})
+    body: JSON.stringify({version: "0.5", update_url: "https://t.me/pirimbetov12", description: "test"})
 })
 .then(res => res.json())
 .then(data => {console.log("+", data)})
