--- a/www/profile.html
+++ b/www/profile.html
@@ -41,9 +41,9 @@
                 <div class="title">Be a seller</div>
                 <i class="fas fa-chevron-right"></i>
             </div>
-            <div class="profile-nav" id="myProductsNav" onclick="location.assign('seller/my-products.html')">
+            <div class="profile-nav" id="myProductsNav" onclick="location.assign('store.html')">
                 <i class="fas fa-shopping-cart"></i>
-                <div class="title">My products</div>
+                <div class="title">My Store</div>
                 <i class="fas fa-chevron-right"></i>
             </div>
             <div class="profile-nav" id="logoutButton">
