--- a/www/store.html
+++ b/www/store.html
@@ -27,7 +27,7 @@
                 <div class="title">My products</div>
                 <i class="fas fa-chevron-right"></i>
             </div>
-            <div class="page" onclick="location.assign('seller/create-prodcut.html')">
+            <div class="page" onclick="location.assign('seller/create-product.html')">
                 <i class="fas fa-plus"></i>
                 <div class="title">Add Product</div>
                 <i class="fas fa-chevron-right"></i>
