--- a/www/store.html
+++ b/www/store.html
@@ -33,7 +33,7 @@
                 <i class="fas fa-chevron-right"></i>
             </div>
             <div class="page" onclick="cealert('You cannot delete the store.')">
-                <i class="fas fa-basket icon-15"></i>
+                <i class="fas fa-trash icon-15"></i>
                 <div class="title">Delete store</div>
                 <i class="fas fa-chevron-right"></i>
             </div>
