--- a/www/tests/updates.html
+++ b/www/tests/updates.html
@@ -11,10 +11,15 @@
     
 <script src="../js/config.js"></script>
 <script>
+
+var version = "0.8"
+var description = "Bugs fixed"
+var update_url = "url"
+
 fetch(baseUrl+"/appmanage/", {
     method: "POST",
     headers: {"Content-Type": "application/json", "authorization": `Bearer ${accessToken}`},
-    body: JSON.stringify({version: "0.8", update_url: "", description: "bugs fixed"})
+    body: JSON.stringify({version: version, update_url: update_url, description: description})
 })
 .then(res => res.json())
 .then(data => {console.log("+", data)})
