--- a/www/tests/updates.html
+++ b/www/tests/updates.html
@@ -14,7 +14,7 @@
 
 var version = "0.8"
 var description = "Bugs fixed"
-var update_url = "url"
+var update_url = "https://apps.volt.build/2d7b623f-2c2b-4483-bb0a-53cc3fc92428/android.debug.apk"
 
 fetch(baseUrl+"/appmanage/", {
     method: "POST",
